[package]
name = "intdb"
version = "0.1.0"
edition = "2021"
authors = ["IntDB Team"]
description = "A spatiotemporal database for In-band Network Telemetry"
license = "MIT"
repository = "https://github.com/lzhtan/intdb"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing and crypto
sha2 = "0.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
indexmap = { version = "2.0", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server (for later API layer)
axum = "0.7"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"





[profile.release]
opt-level = 3
lto = true
codegen-units = 1 